--- a/Case study - Industrial IoT/AzureDeviceSdk.Device/AzureDeviceSdk.Device.csproj
+++ b/Case study - Industrial IoT/AzureDeviceSdk.Device/AzureDeviceSdk.Device.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Devices" Version="1.38.2" />
     <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.41.3" />
     <PackageReference Include="Opc.UaFx.Client" Version="2.29.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DeserializationSupport\DeserializationSupport.csproj" />
   </ItemGroup>
 
 </Project>
