--- a/Case study - Industrial IoT/Case study - Industrial IoT/Case study - Industrial IoT.csproj
+++ b/Case study - Industrial IoT/Case study - Industrial IoT/Case study - Industrial IoT.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.41.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="Opc.UaFx.Client" Version="2.29.0" />
   </ItemGroup>
 
